integ-tests/tests/snapshots/parser__bad_booleans__true_trailing.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ true_trailing:1:11
  │
1 │ foo = true2
  │           ^ expected newline
